@@ -4,6 +4,8 @@ ver 0.21.1 (not yet released)
 * decoder
   - ffmpeg: fix build failure with non-standard FFmpeg installation path
   - flac: fix linker failure when building without FLAC support
+* encoder
+  - vorbis: fix linker failure when building without Vorbis decoder
 * fix build failure on Linux-PowerPC
 * fix build failure on FreeBSD
 * eliminate DLL dependencies on Windows
